@@ -1,3 +1,8 @@
+2007-03-16  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: emacs/kahua.el.in
+	  Add more keywords.
+
 2007-03-07  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: emacs/kahua.el.in
